--- a/UserWebGUI/html/DCSMonitoringPages/daq/IERCDaqRoomHealth.html
+++ b/UserWebGUI/html/DCSMonitoringPages/daq/IERCDaqRoomHealth.html
@@ -75,74 +75,76 @@
 			}
 
 			var pvLedE_ = [
- 				  {"Mu2e:RackProt:1E:state": 1}
+ 				//   {"Mu2e:RackProt:1E:state": 1}
 				]; 
 
 			var pvLedW_ = [
-				  {"Mu2e:RackProt:1W:state": 1}
+				//   {"Mu2e:RackProt:1W:state": 1}
 			]; 
 
 			var pvTemperE_ = [
-				  {"Mu2e:RackTemp:1E:0:temperature": 1}
-				, {"Mu2e:RackTemp:1E:1:temperature": 1}
-				, {"Mu2e:RackTemp:1E:2:temperature": 1}
+				//   {"Mu2e:RackTemp:1E:0:temperature": 1}
+				// , {"Mu2e:RackTemp:1E:1:temperature": 1}
+				// , {"Mu2e:RackTemp:1E:2:temperature": 1}
 			];
 
 			var pvTemperW_ = [
-				  {"Mu2e:RackTemp:1W:0:temperature": 1}
-				, {"Mu2e:RackTemp:1W:1:temperature": 1}
-				, {"Mu2e:RackTemp:1W:2:temperature": 1}
+				//   {"Mu2e:RackTemp:1W:0:temperature": 1}
+				// , {"Mu2e:RackTemp:1W:1:temperature": 1}
+				// , {"Mu2e:RackTemp:1W:2:temperature": 1}
 			];
 
 			var pvNodeLedE_ = [
 				//1E
-				  {"Mu2e:PDU:1E_L:P1": [1, 1, 1]}
-				, {"Mu2e:PDU:1E_L:P2": [1, 1, 2]}
-				, {"Mu2e:PDU:1E_L:P3": [1, 1, 3]}
-				, {"Mu2e:PDU:1E_R:P1": [1, 1, 4]}
-				, {"Mu2e:PDU:1E_R:P2": [1, 1, 5]}
-				, {"Mu2e:PDU:1E_R:P3": [1, 1, 6]}
+				//   {"Mu2e:PDU:1E_L:P1": [1, 1, 1]}
+				// , {"Mu2e:PDU:1E_L:P2": [1, 1, 2]}
+				// , {"Mu2e:PDU:1E_L:P3": [1, 1, 3]}
+				// , {"Mu2e:PDU:1E_R:P1": [1, 1, 4]}
+				// , {"Mu2e:PDU:1E_R:P2": [1, 1, 5]}
+				// , {"Mu2e:PDU:1E_R:P3": [1, 1, 6]}
 			];
 
 			var pvNodeTemperE_ = [
 				//1E
-				  {"Mu2e:CompStatus:trk-01:DTC0:dtctemp": [1, 11, 1]}
-				, {"Mu2e:CompStatus:trk-01:DTC1:dtctemp": [1, 11, 2]}
-				, {"Mu2e:CompStatus:trk-02:DTC0:dtctemp": [1, 10, 1]}
-				, {"Mu2e:CompStatus:trk-02:DTC1:dtctemp": [1, 10, 2]}
-				, {"Mu2e:CompStatus:trk-03:DTC0:dtctemp": [1, 9, 1]}
-				, {"Mu2e:CompStatus:trk-03:DTC1:dtctemp": [1, 9, 2]}
-				, {"Mu2e:CompStatus:trk-04:DTC0:dtctemp": [1, 8, 1]}
-				, {"Mu2e:CompStatus:trk-04:DTC1:dtctemp": [1, 8, 2]}
-				, {"Mu2e:CompStatus:trk-05:DTC0:dtctemp": [1, 7, 1]}
-				, {"Mu2e:CompStatus:trk-05:DTC1:dtctemp": [1, 7, 2]}
+				  {"Mu2e:CompStatus:daq07:DTC0:dtctemp": [1, 11, 1]}
+				//, {"Mu2e:CompStatus:daq07:DTC1:dtctemp": [1, 11, 2]}
+				, {"Mu2e:CompStatus:daq11:DTC0:dtctemp": [1, 8, 1]}
+				//, {"Mu2e:CompStatus:daq11:DTC1:dtctemp": [1, 8, 2]}
+				, {"Mu2e:CompStatus:daq14:DTC0:dtctemp": [1, 7, 1]}
+				, {"Mu2e:CompStatus:daq14:DTC1:dtctemp": [1, 7, 2]}
+				, {"Mu2e:CompStatus:daq09:DTC0:dtctemp": [1, 6, 1]}
+				, {"Mu2e:CompStatus:daq09:DTC1:dtctemp": [1, 6, 2]}
+				, {"Mu2e:CompStatus:cfo01:DTC0:dtctemp": [1, 5, 1]}
+				//, {"Mu2e:CompStatus:cfo01:DTC1:dtctemp": [1, 7, 2]}
+				, {"Mu2e:CompStatus:daq22:DTC0:dtctemp": [1, 2, 1]}
+				, {"Mu2e:CompStatus:daq22:DTC1:dtctemp": [1, 2, 2]}
 			];
 
 			var pvNodeLedW_ = [
 				//1W
-				  {"Mu2e:PDU:1W_L:P1": [1, 1, 1]}
-				, {"Mu2e:PDU:1W_L:P2": [1, 1, 2]}
-				, {"Mu2e:PDU:1W_L:P3": [1, 1, 3]}
-				, {"Mu2e:PDU:1W_R:P1": [1, 1, 4]}
-				, {"Mu2e:PDU:1W_R:P2": [1, 1, 5]}
-				, {"Mu2e:PDU:1W_R:P3": [1, 1, 6]}
+				//   {"Mu2e:PDU:1W_L:P1": [1, 1, 1]}
+				// , {"Mu2e:PDU:1W_L:P2": [1, 1, 2]}
+				// , {"Mu2e:PDU:1W_L:P3": [1, 1, 3]}
+				// , {"Mu2e:PDU:1W_R:P1": [1, 1, 4]}
+				// , {"Mu2e:PDU:1W_R:P2": [1, 1, 5]}
+				// , {"Mu2e:PDU:1W_R:P3": [1, 1, 6]}
 			];
 
 			var pvNodeTemperW_ = [
 				//1W
-				  {"Mu2e:CompStatus:calo-01:DTC0:dtctemp": [1, 11, 1]}
-				, {"Mu2e:CompStatus:calo-01:DTC1:dtctemp": [1, 11, 2]}
-				, {"Mu2e:CompStatus:calo-02:DTC0:dtctemp": [1, 10, 1]}
-				, {"Mu2e:CompStatus:calo-02:DTC1:dtctemp": [1, 10, 2]}
-				, {"Mu2e:CompStatus:calo-03:DTC0:dtctemp": [1, 9, 1]}
-				, {"Mu2e:CompStatus:calo-03:DTC1:dtctemp": [1, 9, 2]}
-				, {"Mu2e:CompStatus:calo-04:DTC0:dtctemp": [1, 8, 1]}
-				, {"Mu2e:CompStatus:calo-04:DTC1:dtctemp": [1, 8, 2]}
-				, {"Mu2e:CompStatus:calo-05:DTC0:dtctemp": [1, 7, 1]}
-				, {"Mu2e:CompStatus:calo-05:DTC1:dtctemp": [1, 7, 2]}
+				//   {"Mu2e:CompStatus:calo-01:DTC0:dtctemp": [1, 11, 1]}
+				// , {"Mu2e:CompStatus:calo-01:DTC1:dtctemp": [1, 11, 2]}
+				// , {"Mu2e:CompStatus:calo-02:DTC0:dtctemp": [1, 10, 1]}
+				// , {"Mu2e:CompStatus:calo-02:DTC1:dtctemp": [1, 10, 2]}
+				// , {"Mu2e:CompStatus:calo-03:DTC0:dtctemp": [1, 9, 1]}
+				// , {"Mu2e:CompStatus:calo-03:DTC1:dtctemp": [1, 9, 2]}
+				// , {"Mu2e:CompStatus:calo-04:DTC0:dtctemp": [1, 8, 1]}
+				// , {"Mu2e:CompStatus:calo-04:DTC1:dtctemp": [1, 8, 2]}
+				// , {"Mu2e:CompStatus:calo-05:DTC0:dtctemp": [1, 7, 1]}
+				// , {"Mu2e:CompStatus:calo-05:DTC1:dtctemp": [1, 7, 2]}
 			];
 
-			/////////////////////////////////////////////////////////////////////////////////////////
+			////////////////////////////////////////////////.bas	/////////////////////////////////////////
 			/////////////////////////////////////////////////////////////////////////////////////////
 
 
@@ -573,8 +575,8 @@
 				<h2 align="center"><br/>IERC Test Stand DAQ room health</h2>
 			</div>
 			<div class="BlockContainer">
-				<div class="rack" id="rack1E"><center>RACK 1E</center></div>
-				<div class="rack" id="rack1W"><center>RACK 1W</center></div>
+				<div class="rack" id="rack1E"><center>RACK 1</center></div>
+				<div class="rack" id="rack1W"><center>RACK 2</center></div>
 			</div> <!-- end top block container -->
 		</div> <!-- end main block container -->
 	</body>
