Added Wideband DCS monitoring.

--- a/UserWebGUI/html/DCSMonitoring.html
+++ b/UserWebGUI/html/DCSMonitoring.html
@@ -137,6 +137,13 @@
 					<div class="dropdown-container">
 						<a href="#">Link TRK main page</a>
 					</div>
+
+					<button class="dropdown-btn">Wideband
+						<i class="fa fa-caret-down"></i>
+					</button>
+					<div class="dropdown-container">
+						<button class="open-page-btn" onmousedown="openPage('/WebPath/UserWebPath/html/DCSMonitoringPages/Wideband.html')"><i class="fa fa-fw fa-star"></i> DCS</button>
+					</div>
 				</div> <!-- end sidenav -->
 			</div> <!-- end side block -->
 			<div class="main">
@@ -144,9 +151,9 @@
 				</iframe>
 			</div> <!-- end main frame block -->
 		</div> <!-- end row block container -->
-
+<!-- 
 		<div class="footer">
 			<h2>Footer</h2>
-		</div>
+		</div> -->
 	</body>
 </html>
