Added FEB FPGA2-4 parameters.

--- a/UserWebGUI/html/DCSMonitoringPages/Wideband.html
+++ b/UserWebGUI/html/DCSMonitoringPages/Wideband.html
@@ -247,8 +247,12 @@
                  Alias: "P1 current",
                  System: "ROC" }
              },
+             {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_status": {
+                 Alias: "Status",
+                 System: "P1 FEB" }
+             },
              {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_temperature": {
-                 Alias: "P1 temperature",
+                 Alias: "Temperature",
                  System: "P1 FEB" }
              },
              {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_Bias_0": {
@@ -319,30 +323,102 @@
                  Alias: "+2.5 V supply",
                  System: "P1 FEB"}
              },
-             {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB0_temperature": {
-                 Alias: "CMB0 temperature",
-                 System: "P1 FEB"}
-             },
-             {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB1_temperature": {
-                 Alias: "CMB1 temperature",
-                 System: "P1 FEB"}
-             },
-             {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB2_temperature": {
-                 Alias: "CMB2 temperature",
-                 System: "P1 FEB"}
-             },
-             {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB3_temperature": {
-                 Alias: "CMB3 temperature",
-                 System: "P1 FEB"}
-             },
              {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_BiasDac_0": {
-                 Alias: "Bias Bus 0 DAC",
-                 System: "P1 FEB"}
-             },
-             {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_BiasDac_1": {
-                 Alias: "Bias Bus 1 DAC",
-                 System: "P1 FEB"}
-             }
+                Alias: "Bias Bus 0 DAC",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_BiasDac_1": {
+                Alias: "Bias Bus 1 DAC",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_BiasDac_2": {
+                Alias: "Bias Bus 2 DAC",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_BiasDac_3": {
+                Alias: "Bias Bus 3 DAC",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_BiasDac_4": {
+                Alias: "Bias Bus 4 DAC",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_BiasDac_5": {
+                Alias: "Bias Bus 5 DAC",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_BiasDac_6": {
+                Alias: "Bias Bus 6 DAC",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_BiasDac_7": {
+                Alias: "Bias Bus 7 DAC",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB0_temperature": {
+                Alias: "CMB0 temperature",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB1_temperature": {
+                Alias: "CMB1 temperature",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB2_temperature": {
+                Alias: "CMB2 temperature",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB3_temperature": {
+                Alias: "CMB3 temperature",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB4_temperature": {
+                Alias: "CMB4 temperature",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB5_temperature": {
+                Alias: "CMB5 temperature",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB6_temperature": {
+                Alias: "CMB6 temperature",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB7_temperature": {
+                Alias: "CMB7 temperature",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB8_temperature": {
+                Alias: "CMB8 temperature",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB9_temperature": {
+                Alias: "CMB9 temperature",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB10_temperature": {
+                Alias: "CMB10 temperature",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB11_temperature": {
+                Alias: "CMB11 temperature",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB12_temperature": {
+                Alias: "CMB12 temperature",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB13_temperature": {
+                Alias: "CMB13 temperature",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB14_temperature": {
+                Alias: "CMB14 temperature",
+                System: "P1 FEB"}
+            },
+            {"Mu2e:TDAQ_crv:crvROC09:FEB_p1_CMB15_temperature": {
+                Alias: "CMB15 temperature",
+                System: "P1 FEB"}
+            }
  
          ];
  
@@ -650,7 +726,7 @@
                          for(var dependendentPV in page_.widgets[widget].pvList) {
                              console.log("poll: " + dependendentPV);
                              if(pv == dependendentPV && page_.widgets[widget].loaded != "false") {
-                                 console.log("Widget *** ", widget, pv);
+                                 console.log("   *** ", widget, pv);
                                  try {
                                      drawNewValue(
                                              widget,
