--- a/UserWebGUI/html/DCSMonitoringPages/Wideband.html
+++ b/UserWebGUI/html/DCSMonitoringPages/Wideband.html
@@ -27,7 +27,8 @@ sgrant@anl.gov
         body {
             font-family: 'Arial';
              /* , Helvetica, sans-serif; */
-            background-color: #000000;
+            background-color: #3b3b3b;
+            /* //background-color: #3b3b3b; */
             color: rgb(255, 255, 255);
         }
 
@@ -112,8 +113,9 @@ sgrant@anl.gov
         /* Left column */
         .pv-table-container {
             width: 45%;
-            padding: 25px;
+            padding: 45px;
             box-sizing: border-box; /* Include padding in the width */
+            margin-left: 50px;
         }
 
         .pv-table {
@@ -173,7 +175,7 @@ sgrant@anl.gov
 
         /* Styles for the plot container (right column) */
         .pv-plot-container {
-            width: 45%;
+            width: 50%;
             box-sizing: border-box; /* Include padding in the width */
         }
 
@@ -186,14 +188,14 @@ sgrant@anl.gov
             width: 50%;
             box-sizing: border-box; /* Include padding in the width */
             font-size: 24px;
-            background-color: rgb(0, 0, 0); 
+            background-color: #222222; 
         }
 
         .custom-input-container {
             width: 50%;
             box-sizing: border-box; /* Include padding in the width */
             font-size: 24px;
-            background-color: rgb(0, 0, 0); 
+            background-color: #222222;
         }
 
         .developer-notes {
@@ -925,28 +927,63 @@ sgrant@anl.gov
             //     }
             // };
 
+        //     var layout = {
+        //         width: 13 * 100,  // Adjust as needed
+        //         height: 10 * 100, // Adjust as needed
+        //         paper_bgcolor: '#222222', // Set background color to black
+        //         plot_bgcolor: '#222222',  // Set plot area background to black
+        //         // axislinecolor: 'white'
+        //         font: {  // Set font color to white for all elements
+        //             color: 'white'
+        //         },
+        //         xaxis: {
+        //             title: 'Time',
+        //             titlefont: { size: 24 },
+        //             showticklabels: true
+        //             // axislinecolor: 'white'
+        //         },
+        //         yaxis: {
+        //             title: pvAlias + " [" + pvUnits + "]",
+        //             titlefont: { size: 24 },
+        //             zeroline: true
+        //             // axislinecolor: 'white'
+        //         }
+        //     };
+
             var layout = {
-                width: 13 * 100,  // Adjust as needed
+                width: 15 * 100,  // Adjust as needed
                 height: 10 * 100, // Adjust as needed
-                paper_bgcolor: 'black', // Set background color to black
-                plot_bgcolor: 'black',  // Set plot area background to black
-                // axislinecolor: 'white'
+                paper_bgcolor: '#3b3b3b', // Set background color to black
+                plot_bgcolor: '#3b3b3b',  // Set plot area background to black
                 font: {  // Set font color to white for all elements
-                    color: 'white'
+                        color: 'white',
+                        size: 36 // Adjust font size as needed
                 },
                 xaxis: {
-                    title: 'Time',
-                    titlefont: { size: 24 },
-                    showticklabels: true
-                    // axislinecolor: 'white'
+                        title: 'Time',
+                        titlefont: { size: 24 },
+                        showticklabels: true,
+                        // titleoffset: 80,
+                        tickfont: {
+                        size: 20 // Adjust font size as needed
+                        },
+                        linecolor: 'white', // Set axis line color
+                        linewidth: 1 // Set axis line width
+                        // gridcolor: 'rgba(255, 255, 255, 0.3)' // Set grid color
                 },
                 yaxis: {
-                    title: pvAlias + " [" + pvUnits + "]",
-                    titlefont: { size: 24 },
-                    zeroline: true
-                    // axislinecolor: 'white'
+                        title: pvAlias + " [" + pvUnits + "]",
+                        titlefont: { size: 24 },
+                        zeroline: true,
+                        // titleoffset: 50000,
+                        tickfont: {
+                        size: 20 // Adjust font size as needed
+                        },
+                        linecolor: 'white', // Set axis line color
+                        linewidth: 1 // Set axis line width
+                        // gridcolor: 'rgba(255, 255, 255, 0.3)' // Set grid color
                 }
-            };
+                };
 
             // Initialize the plot using Plotly
             Plotly.newPlot(plot.id, traces, layout);
