--- a/UserWebGUI/html/DCSMonitoringPages/daq/IERCDaqRoomHealth.html
+++ b/UserWebGUI/html/DCSMonitoringPages/daq/IERCDaqRoomHealth.html
@@ -75,73 +75,75 @@
 			}
 
 			var pvLedE_ = [
- 				//   {"Mu2e:RackProt:1E:state": 1}
+ 				//   {"Mu2eDev:RackProt:1E:state": 1}
 				]; 
 
 			var pvLedW_ = [
-				//   {"Mu2e:RackProt:1W:state": 1}
+				//   {"Mu2eDev:RackProt:1W:state": 1}
 			]; 
 
 			var pvTemperE_ = [
-				//   {"Mu2e:RackTemp:1E:0:temperature": 1}
-				// , {"Mu2e:RackTemp:1E:1:temperature": 1}
-				// , {"Mu2e:RackTemp:1E:2:temperature": 1}
+				//   {"Mu2eDev:RackTemp:1E:0:temperature": 1}
+				// , {"Mu2eDev:RackTemp:1E:1:temperature": 1}
+				// , {"Mu2eDev:RackTemp:1E:2:temperature": 1}
 			];
 
 			var pvTemperW_ = [
-				//   {"Mu2e:RackTemp:1W:0:temperature": 1}
-				// , {"Mu2e:RackTemp:1W:1:temperature": 1}
-				// , {"Mu2e:RackTemp:1W:2:temperature": 1}
+				//   {"Mu2eDev:RackTemp:1W:0:temperature": 1}
+				// , {"Mu2eDev:RackTemp:1W:1:temperature": 1}
+				// , {"Mu2eDev:RackTemp:1W:2:temperature": 1}
 			];
 
 			var pvNodeLedE_ = [
 				//1E
-				//   {"Mu2e:PDU:1E_L:P1": [1, 1, 1]}
-				// , {"Mu2e:PDU:1E_L:P2": [1, 1, 2]}
-				// , {"Mu2e:PDU:1E_L:P3": [1, 1, 3]}
-				// , {"Mu2e:PDU:1E_R:P1": [1, 1, 4]}
-				// , {"Mu2e:PDU:1E_R:P2": [1, 1, 5]}
-				// , {"Mu2e:PDU:1E_R:P3": [1, 1, 6]}
+				//   {"Mu2eDev:PDU:1E_L:P1": [1, 1, 1]}
+				// , {"Mu2eDev:PDU:1E_L:P2": [1, 1, 2]}
+				// , {"Mu2eDev:PDU:1E_L:P3": [1, 1, 3]}
+				// , {"Mu2eDev:PDU:1E_R:P1": [1, 1, 4]}
+				// , {"Mu2eDev:PDU:1E_R:P2": [1, 1, 5]}
+				// , {"Mu2eDev:PDU:1E_R:P3": [1, 1, 6]}
 			];
 
 			var pvNodeTemperE_ = [
 				//1E
-				  {"Mu2e:CompStatus:daq07:DTC0:dtctemp": [1, 11, 1]}
-				//, {"Mu2e:CompStatus:daq07:DTC1:dtctemp": [1, 11, 2]}
-				, {"Mu2e:CompStatus:daq11:DTC0:dtctemp": [1, 8, 1]}
-				//, {"Mu2e:CompStatus:daq11:DTC1:dtctemp": [1, 8, 2]}
-				, {"Mu2e:CompStatus:daq14:DTC0:dtctemp": [1, 7, 1]}
-				, {"Mu2e:CompStatus:daq14:DTC1:dtctemp": [1, 7, 2]}
-				, {"Mu2e:CompStatus:daq09:DTC0:dtctemp": [1, 6, 1]}
-				, {"Mu2e:CompStatus:daq09:DTC1:dtctemp": [1, 6, 2]}
-				, {"Mu2e:CompStatus:cfo01:DTC0:dtctemp": [1, 5, 1]}
-				//, {"Mu2e:CompStatus:cfo01:DTC1:dtctemp": [1, 7, 2]}
-				, {"Mu2e:CompStatus:daq22:DTC0:dtctemp": [1, 2, 1]}
-				, {"Mu2e:CompStatus:daq22:DTC1:dtctemp": [1, 2, 2]}
+				  {"Mu2eDev:CompStatus:daq07:DTC0:dtctemp": [1, 11, 1]}
+				//, {"Mu2eDev:CompStatus:daq07:DTC1:dtctemp": [1, 11, 2]}
+				, {"Mu2eDev:CompStatus:daq10:DTC0:dtctemp": [1, 10, 1]}
+				//, {"Mu2eDev:CompStatus:daq10:DTC1:dtctemp": [1, 10, 2]}
+				, {"Mu2eDev:CompStatus:daq11:DTC0:dtctemp": [1, 8, 1]}
+				//, {"Mu2eDev:CompStatus:daq11:DTC1:dtctemp": [1, 8, 2]}
+				, {"Mu2eDev:CompStatus:daq14:DTC0:dtctemp": [1, 7, 1]}
+				//, {"Mu2eDev:CompStatus:daq14:DTC1:dtctemp": [1, 7, 2]}
+				, {"Mu2eDev:CompStatus:daq09:DTC0:dtctemp": [1, 6, 1]}
+				, {"Mu2eDev:CompStatus:daq09:DTC1:dtctemp": [1, 6, 2]}
+				, {"Mu2eDev:CompStatus:daq04:DTC0:dtctemp": [1, 5, 1]}
+				//, {"Mu2eDev:CompStatus:cfo01:DTC1:dtctemp": [1, 7, 2]}
+				, {"Mu2eDev:CompStatus:daq22:DTC0:dtctemp": [1, 2, 1]}
+				, {"Mu2eDev:CompStatus:daq22:DTC1:dtctemp": [1, 2, 2]}
 			];
 
 			var pvNodeLedW_ = [
 				//1W
-				//   {"Mu2e:PDU:1W_L:P1": [1, 1, 1]}
-				// , {"Mu2e:PDU:1W_L:P2": [1, 1, 2]}
-				// , {"Mu2e:PDU:1W_L:P3": [1, 1, 3]}
-				// , {"Mu2e:PDU:1W_R:P1": [1, 1, 4]}
-				// , {"Mu2e:PDU:1W_R:P2": [1, 1, 5]}
-				// , {"Mu2e:PDU:1W_R:P3": [1, 1, 6]}
+				//   {"Mu2eDev:PDU:1W_L:P1": [1, 1, 1]}
+				// , {"Mu2eDev:PDU:1W_L:P2": [1, 1, 2]}
+				// , {"Mu2eDev:PDU:1W_L:P3": [1, 1, 3]}
+				// , {"Mu2eDev:PDU:1W_R:P1": [1, 1, 4]}
+				// , {"Mu2eDev:PDU:1W_R:P2": [1, 1, 5]}
+				// , {"Mu2eDev:PDU:1W_R:P3": [1, 1, 6]}
 			];
 
 			var pvNodeTemperW_ = [
 				//1W
-				//   {"Mu2e:CompStatus:calo-01:DTC0:dtctemp": [1, 11, 1]}
-				// , {"Mu2e:CompStatus:calo-01:DTC1:dtctemp": [1, 11, 2]}
-				// , {"Mu2e:CompStatus:calo-02:DTC0:dtctemp": [1, 10, 1]}
-				// , {"Mu2e:CompStatus:calo-02:DTC1:dtctemp": [1, 10, 2]}
-				// , {"Mu2e:CompStatus:calo-03:DTC0:dtctemp": [1, 9, 1]}
-				// , {"Mu2e:CompStatus:calo-03:DTC1:dtctemp": [1, 9, 2]}
-				// , {"Mu2e:CompStatus:calo-04:DTC0:dtctemp": [1, 8, 1]}
-				// , {"Mu2e:CompStatus:calo-04:DTC1:dtctemp": [1, 8, 2]}
-				// , {"Mu2e:CompStatus:calo-05:DTC0:dtctemp": [1, 7, 1]}
-				// , {"Mu2e:CompStatus:calo-05:DTC1:dtctemp": [1, 7, 2]}
+				//   {"Mu2eDev:CompStatus:calo-01:DTC0:dtctemp": [1, 11, 1]}
+				// , {"Mu2eDev:CompStatus:calo-01:DTC1:dtctemp": [1, 11, 2]}
+				// , {"Mu2eDev:CompStatus:calo-02:DTC0:dtctemp": [1, 10, 1]}
+				// , {"Mu2eDev:CompStatus:calo-02:DTC1:dtctemp": [1, 10, 2]}
+				// , {"Mu2eDev:CompStatus:calo-03:DTC0:dtctemp": [1, 9, 1]}
+				// , {"Mu2eDev:CompStatus:calo-03:DTC1:dtctemp": [1, 9, 2]}
+				// , {"Mu2eDev:CompStatus:calo-04:DTC0:dtctemp": [1, 8, 1]}
+				// , {"Mu2eDev:CompStatus:calo-04:DTC1:dtctemp": [1, 8, 2]}
+				// , {"Mu2eDev:CompStatus:calo-05:DTC0:dtctemp": [1, 7, 1]}
+				// , {"Mu2eDev:CompStatus:calo-05:DTC1:dtctemp": [1, 7, 2]}
 			];
 
 			////////////////////////////////////////////////.bas	/////////////////////////////////////////
